# ojodrop

./: .gitmodules  Cargo.toml  LICENSE  README.md
crates/particle-audio/: Cargo.toml
crates/particle-audio/examples/: meter.rs
crates/particle-audio/src/: analysis.rs  butterchurn.rs  capture.rs  capture_macos.rs  complex_onset.rs  dsp.rs  hpss.rs  hpss_bus.rs  lib.rs  linkwitz_riley.rs  onset.rs  predictive_drop.rs  resample.rs  smoothing.rs  spectrogram.rs  structure.rs  tempo.rs  tonal.rs  triple_buffer.rs
crates/particle-audio/tests/: butterchurn_parity.rs
crates/particle-milkdrop/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/particle-milkdrop-converter-sys/: Cargo.toml  build.rs
crates/particle-milkdrop-converter-sys/cmake/: CMakeLists.txt
crates/particle-milkdrop-converter-sys/src/: containment.rs  helper_main.rs  lib.rs  test_main.rs
crates/particle-milkdrop-converter-sys/src/shim/: milk_converter_shim.cpp
crates/particle-milkdrop/bundle/: OjoDrop.icns
crates/particle-milkdrop/examples/: compile_preset.rs
crates/particle-milkdrop/src/: equations.rs  lib.rs  load_json.rs  main.rs  named_textures.rs  parse_milk.rs  preprocess.rs  renderer.rs
crates/particle-milkdrop/src/shaders/: blur.wgsl  darken_center.wgsl  fxaa.wgsl  motion_vectors.wgsl  quad.wgsl  shapes.wgsl  warp_mesh.wgsl  warp_mesh_vs.wgsl  wave.wgsl
